[package]
name = "parallel-stream"
version = "0.3.1"
authors = [ "Stefan Sydow <stefan.sydow@tu-berlin.de>" ]
edition = "2018"

[dependencies]
futures = "0.3"
pin-project = "1"

[dependencies.tokio]
version = "0.3"
features = ["io-std", "io-util", "rt-multi-thread", "fs", "sync", "stream"]

[dev-dependencies]
libc = "0.2"
bytes = "0.5"
smol = "1.2"
#flume = "0.9"
[dev-dependencies.flume]
git = "https://github.com/zesterer/flume.git" 
rev = "0baef3d"

[dev-dependencies.tokio-util]
version = "0.4"
features = ["codec"]

[profile.bench]
lto= "thin"
opt-level = 3
codegen-units = 4

#[profile.release]
#lto= "fat"
#opt-level = 3
#codegen-units = 1
#panic = "abort"

#[profile.dev]
#opt-level = 1
#debug = 2
