[package]
name = "parallel-stream"
version = "0.3.1"
authors = [ "Stefan Sydow <stefan.sydow@tu-berlin.de>" ]
edition = "2018"

[dependencies]
futures = "0.3"
pin-project = "1"

[dependencies.tokio]
version = "0.3"
features = ["io-std", "io-util", "rt-multi-thread", "fs", "sync", "stream"]

[dependencies.flume]
git = "https://github.com/zesterer/flume.git" 
rev = "0baef3d"

[dev-dependencies]
libc = "0.2"
bytes = "0.6"
smol = "1.2"
async-fs = "1.5"

[dev-dependencies.executors]
version = "0.8"
features = ["thread-pinning"]

[dev-dependencies.tokio-util]
version = "0.5"
features = ["codec"]

[profile.bench]
lto= "thin"
opt-level = 3
codegen-units = 4

#[profile.release]
#lto= "fat"
#opt-level = 3
#codegen-units = 1
#panic = "abort"

#[profile.dev]
#opt-level = 1
#debug = 2
